<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchButton"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:iconTint="?attr/colorOnMenuContainer"
        app:showAsAction="always" />

    <item
        android:id="@+id/filterButton"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_filter"
        app:iconTint="?attr/colorOnMenuContainer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sortButton"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        app:iconTint="?attr/colorOnMenuContainer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsButton"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:iconTint="?attr/colorOnMenuContainer"
        app:showAsAction="always" />
</menu>
