<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/layout_dimension_16"
    android:paddingTop="@dimen/layout_dimension_10"
    android:paddingRight="@dimen/layout_dimension_16"
    android:paddingBottom="@dimen/layout_dimension_10">

    <!-- Drag icon -->
    <ImageView
        android:id="@+id/drag_handle"
        android:layout_width="@dimen/layout_dimension_40"
        android:layout_height="@dimen/layout_dimension_40"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/menu_drag"
        android:padding="@dimen/layout_dimension_8"
        android:src="@drawable/ic_menu"
        app:iconTint="?attr/colorOnMenuContainer" />

    <!-- Activity details -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Activity name -->
        <TextView
            android:id="@+id/activity_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_name_hint"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <!-- Notes (hidden) -->
        <TextView
            android:id="@+id/notes_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_notes_hint"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <!-- Archived (hidden) -->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/archived_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_archived_hint"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <!-- Category (hidden) -->
        <TextView
            android:id="@+id/category_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_category_hint"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <!-- Tags (hidden) -->
        <TextView
            android:id="@+id/tag_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_tags_hint"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_16"
            android:visibility="gone" />

        <!-- Relative date -->
        <TextView
            android:id="@+id/relative_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnTertiary"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />

        <!-- Start date -->
        <TextView
            android:id="@+id/start_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_start_date_hint"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_14" />

        <!-- End date -->
        <TextView
            android:id="@+id/end_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_end_date_hint"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <!-- Ellipsis button -->
    <ImageButton
        android:id="@+id/item_menu_button"
        android:layout_width="@dimen/layout_dimension_48"
        android:layout_height="@dimen/layout_dimension_48"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/menu_more"
        android:src="@drawable/ic_vertical_ellipsis"
        app:iconTint="?attr/colorOnMenuContainer" />
</LinearLayout>